Fix GenerativeLeaveTable by replacing === with == so that the Earned Leaves get displayed correctly. Fix width of headers in AttendanceHeader. Also add 'updateEmployeeId' in dependency array of getShift function.

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -10,7 +10,8 @@
   }; */
   @layer utilities {
     .scrollbar::-webkit-scrollbar {
-      width: 5px;
+      width: 6px;
+      height: 6px;
     }
   
     .scrollbar::-webkit-scrollbar-thumb {
